modules/cli/src/test/resources/good/efsm/gchoice/Test12b.scr
module good.efsm.gchoice.Test12b;


global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		0() from A to B;
		0() from B to C;
		choice at A
		{
			1() from A to B;
			1() from B to C;
		}
		or
		{
			2() from A to B;
			2() from B to C;
		}
		continue X;  // EFSM building -- multiple predecessors for continue-edge replacement
	}
}

